--- a/css/rs.css
+++ b/css/rs.css
@@ -1,7 +1,7 @@
 /*!
- * Rs v1.0.0 (https://getbootstrap.com/)
+ * Rs v1.0.0 (https://github.com/hktom/rs)
  * Copyright 2018-2019 Tom Hikari
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ * Licensed under MIT (https://github.com/hktom/rs)
 */
 
 /*page default */
